salvato lavoro della giornata

--- a/force-app/main/default/classes/ElencoContatti.cls
+++ b/force-app/main/default/classes/ElencoContatti.cls
@@ -2,7 +2,7 @@ public with sharing class ElencoContatti {
     @AuraEnabled(cacheable=true)
     public static List<Contact> getContacts() {
         
-        List<Contact> contatti = [SELECT Id, FirstName, LastName, Email, Phone, Account.Name FROM Contact WHERE AccountId != null];
+        List<Contact> contatti = [SELECT Id, FirstName, LastName, Email, Phone, Account.Name FROM Contact ORDER BY CreatedDate DESC];
         return contatti;
         
     }
