Oscurata chiave API

--- a/force-app/main/default/classes/WeatherControl.cls
+++ b/force-app/main/default/classes/WeatherControl.cls
@@ -1,17 +1,11 @@
 public with sharing class WeatherControl {
-    
-    String lat = '45.46427';
-    String lon = '9.18951';
-    String part ='hourly,daily';
-    String apiKey = WeatherControl__c.getOrgDefaults().APIKey__c;
-    String apiKey2 = '60d1cf7a5505b0aac7015291099d53ee';
-    String endPoint = 'https://api.openweathermap.org/data/3.0/onecall?lat='+lat+'&lon='+lon+'&exclude='+part+'&appid='+apiKey;
-    String endPoint2 = 'https://api.openweathermap.org/data/2.5/weather?lat='+lat+'&lon='+lon+'&appid='+apiKey;
-    String endPoint3 = 'https://api.openweathermap.org/data/2.5/weather?q=London,uk&APPID='+apiKey2;
-    String endPoint4 = 'https://api.openweathermap.org/data/2.5/weather?q=Milano,it&APPID=60d1cf7a5505b0aac7015291099d53ee';
-    
-    public void weatherControl() {
-        
+
+    @AuraEnabled(cacheable=true)
+    public static String weatherControl() {
+        String apiKey = WeatherControl__c.getInstance().APIKey__c;
+        String cityNation = 'Milano,it';
+        System.debug(apiKey);
+        String endPoint3 = 'https://api.openweathermap.org/data/2.5/weather?q='+cityNation+'&APPID='+apiKey;
         //make a callout
         Http http = new Http();
         HttpRequest request = new HttpRequest();
@@ -24,10 +18,12 @@ public with sharing class WeatherControl {
         
         if (response.getStatusCode() == 200) {
             
+            return response.getBody();
             
-            Map<String, Object> parsedMap = (Map<String, Object>) JSON.deserializeUntyped(response.getBody());
             
-            
+        } else {
+            System.debug('Callout failed: ' + response);
+            return null;
         }
     }
 }
